<resources>
    <string name="app_name">Desafio2</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="name_hint">Name</string>
    <string name="password_repeat_hint">Repeat password</string>
    <string name="app_description">Digital House Foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pratos_principais">Pratos principais</string>
</resources>