<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        style="@style/DefaultInputLayout"
        android:layout_marginTop="54dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:text="a1lexandre@hotmail.com"
            style="@style/DefaultInputEdit"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        style="@style/DefaultInputLayout"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/DefaultInputEdit"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbLogin"
        android:layout_width="match_parent"
        android:text="@string/login_button"
        style="@style/DefaultButton"
        android:layout_marginTop="67dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"/>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="52dp"
        android:text="OR"
        app:layout_constraintStart_toEndOf="@id/vLeft"
        app:layout_constraintEnd_toStartOf="@id/vRight"
        app:layout_constraintTop_toBottomOf="@id/mbLogin"
        />

    <View
        android:id="@+id/vLeft"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintEnd_toStartOf="@id/tvOr"/>

    <View
        android:id="@+id/vRight"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@id/tvOr"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbRegister"
        android:layout_width="match_parent"
        android:text="@string/register_button"
        style="@style/RegisterButton"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>